
2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	* cobc.c, codegen.c, codeoptim.c, error.c, field.c, pplex.l, tree.c
	  typeck.c: surrounded exception ABORTs that cannot be tested by LCOV_EXCP
	  markers

2017-06-16  Dave Pitts <dpitts@cozx.com>

	* cobc.c (reflow_replaced_fixed_format_text): listings: Fixed multiple
	  line output.

2017-06-13  Dave Pitts <dpitts@cozx.com>

	* cobc.c (get_next_token): listings: Keep string as a single token.

2017-06-13  Ron Norman <rjn@inglenet.com>

	* typeck.c: #306 check for misplaced operators and report error

2017-06-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.def: renamed "debugging-line" option (cb_debugging_line)
	  to "debugging-mode" (cb_debugging_mode) because of name conflict
	  with option -fdebugging-line to activate these lines
	* parser.y, pplex.l: moved compiler verification for DEBUGGING MODE
	  from parser.y to pplex.l
	* pplex.l: actual compiler verification for debugging indicators

2017-06-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l: error on $SET var lit OVERRIDE (as this isn't available it was
	  interpreted as unknown SET OPTION)

2017-06-09  Ron Norman <rjn@inglenet.com>

	* ppparse.y, scanner.l: pass OVERRIDE thru the
	  preprocessor to allow variables to be redefined

2017-06-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l: remove trailing spaces and inline comments
	  for >> DISPLAY and $DISPLAY, remove surrounding quotation symbols
	* typeck.c (cb_build_const_from): create numeric constant instead
	  of alphanumeric if the compile-time variable is numeric

2017-06-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* ppparse.y, config.def: only allow extension ">> DEFINE CONSTANT var [AS]"
	  depending on configuration option define-constant-directive
	  --> use plain  >> DEFINE var [AS] literal for conditional compilation