@@ -1,4 +1,10 @@
 
+2017-06-20  Dave Pitts <dpitts@cozx.com>
+
+	* cobc.c: Added CALL cross reference functions.
+	* tree.h: Added CALL cross reference structures.
+	* typeck.c: Added CALL cross reference calls.
+
 2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
